@startuml

title __CONFIG's Class Diagram__\n

  namespace com.kate_chaus.art_orders {
    namespace config {
      class com.kate_chaus.art_orders.config.MvcConfig {
          - uploadPath : String
          + addResourceHandlers()
          + addViewControllers()
      }
    }
  }
  

  namespace com.kate_chaus.art_orders {
    namespace config {
      class com.kate_chaus.art_orders.config.WebSecurityConfig {
          - passwordEncoder : PasswordEncoder
          + getPasswordEncoder()
          # configure()
          # configure()
      }
    }
  }
  

  com.kate_chaus.art_orders.config.MvcConfig .up.|> org.springframework.web.servlet.config.annotation.WebMvcConfigurer
  com.kate_chaus.art_orders.config.WebSecurityConfig -up-|> org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter
  com.kate_chaus.art_orders.config.WebSecurityConfig o-- com.kate_chaus.art_orders.service.UserService : userService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
